Print Preview: Create Save As PDF directory if it does not exist.

If the default Save As PDF directory (which is the same as the user's
default downloads directory) does not exist, create it before opening
the select file dialog. Otherwise, the select file dialog will open in
the lowest level folder on the path that already exists.

BUG=718527

Review-Url: https://codereview.chromium.org/2952043002
Cr-Commit-Position: refs/heads/master@{#481699}

Former-commit-id: dd822dd88fd5f1af99afb1ac3228e7bdad2ecc81